--- a/index.html
+++ b/index.html
@@ -1,143 +1,118 @@
 <!DOCTYPE h tml>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>La Selva</title>
-    <meta
-      name="description"
-      content="Estudio de yoga y café que busca fomentar el encuentro y la comunidad. Apunta a una práctica del yoga honesta y respetuosa con el mundo que habitamos."
-    />
-    <meta
-      name="keywords"
-      content="yoga, café, estudio, ashtanga, acroyoga, vinyasa, hatha"
-    />
-    <link rel="icon" type=image/x-icon href="img/favicon.png">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/6907af4838.js"
-      crossorigin="anonymous"
-    ></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" type="text/CSS" href="css/styles.css" />
-    <script defer src="js/variables.js"></script>
-    <script defer src="js/main.js"></script>
-  </head>
 
-  <body>
-    <!--Encabezado-->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>La Selva</title>
+  <meta name="description"
+    content="Estudio de yoga y café que busca fomentar el encuentro y la comunidad. Apunta a una práctica del yoga honesta y respetuosa con el mundo que habitamos." />
+  <meta name="keywords" content="yoga, café, estudio, ashtanga, acroyoga, vinyasa, hatha" />
+  <link rel="icon" type=image/x-icon href="img/favicon.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/6907af4838.js" crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <link rel="stylesheet" type="text/CSS" href="css/styles.css" />
+  <script defer src="js/variables.js"></script>
+  <script defer src="js/main.js"></script>
+</head>
 
-    <header id="header" class="container-fluid gx-0">
-      <div>
-        <img src="img/logo.png" alt="logotipo" />
+<body>
+  <!--Encabezado-->
+
+  <header id="header" class="container-fluid gx-0">
+    <div>
+      <img src="img/logo.png" alt="logotipo" />
+    </div>
+
+    <!--Menú-->
+
+    <nav class="mainMenu" id="nav">
+      <ul>
+        <li>
+          <a href="pages/carrito.html">
+            <div class="imgCarrito">
+              <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-cart"
+                viewBox="0 0 16 16">
+                <path
+                  d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+              </svg>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <!--Fin del menú-->
+  </header>
+
+  <!--Fin del encabezado-->
+
+  <!--Contenido principal-->
+
+  <main class="container-fluid">
+    <!--Inicio banner-->
+
+    <section class="row">
+      <div class="banner col-12">
+        <h1>TIENDA DE YOGA</h1>
+      </div>
+    </section>
+
+    <!--Fin del banner-->
+
+    <!--Tienda-->
+
+    <section class="principal row">
+      <div class="box">
+        <div class="description card-text">
+          <p>
+            Te damos la bienvenida a nuestra tienda. ¿Tenés todo lo que
+            necesitás para tus prácticas? Mirá nuestra selección de productos
+            y preparate.
+          </p>
+        </div>
       </div>
 
-      <!--Menú-->
+      <div class="contenedor row justify-content-center">
+        <div class="card col-12 col-md"></div>
+      </div>
 
-      <nav class="mainMenu" id="nav">
-        <ul>
-          <li>
-            <a href="pages/carrito.html">
-              <div class="imgCarrito">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="50"
-                  height="50"
-                  fill="currentColor"
-                  class="bi bi-cart"
-                  viewBox="0 0 16 16"
-                >
-                  <path
-                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"
-                  />
-                </svg>
-              </div>
-            </a>
-          </li>
-        </ul>
-      </nav>
+      </div>
+    </section>
+  </main>
 
-      <!--Fin del menú-->
-    </header>
+  <!--Fin del contenido principal-->
 
-    <!--Fin del encabezado-->
+  <!--Pie de página-->
 
-    <!--Contenido principal-->
+  <footer class="container-fluid gx-0">
+    <section>
+      <div class="details">
+        <p><span class="icon">c</span> +54 221 600 99 11</p>
+        <p><span class="icon">@</span> laselva@gmail.com</p>
+        <p><span class="icon">?</span> Calle 12 N° 123</p>
+      </div>
 
-    <main class="container-fluid">
-      <!--Inicio banner-->
+      <div class="social">
+        <span class="icon">l</span>
+        <span class="icon">f</span>
+        <span class="icon">y</span>
+      </div>
+    </section>
+  </footer>
 
-      <section class="row">
-        <div class="banner col-12">
-          <h1>TIENDA DE YOGA</h1>
-        </div>
-      </section>
+  <!--Fin del página-->
+</body>
 
-      <!--Fin del banner-->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+  integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+  integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 
-      <!--Tienda-->
-
-      <section class="principal row">
-        <div class="box">
-          <div class="description card-text">
-            <p>
-              Te damos la bienvenida a nuestra tienda. ¿Tenés todo lo que
-              necesitás para tus prácticas? Mirá nuestra selección de productos
-              y preparate.
-            </p>
-          </div>
-        </div>
-
-        <div class="contenedor row justify-content-center">
-          <div class="card col-12 col-md"></div>
-        </div>
-      
-        </div>
-      </section>
-    </main>
-
-    <!--Fin del contenido principal-->
-
-    <!--Pie de página-->
-
-    <footer class="container-fluid gx-0">
-      <section>
-        <div class="details">
-          <p><span class="icon">c</span> +54 221 600 99 11</p>
-          <p><span class="icon">@</span> laselva@gmail.com</p>
-          <p><span class="icon">?</span> Calle 12 N° 123</p>
-        </div>
-
-        <div class="social">
-          <span class="icon">l</span>
-          <span class="icon">f</span>
-          <span class="icon">y</span>
-        </div>
-      </section>
-    </footer>
-
-    <!--Fin del página-->
-  </body>
-
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-    crossorigin="anonymous"
-  ></script>
 </html>
